--- a/page3.html
+++ b/page3.html
@@ -9,7 +9,8 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     <link rel="icon" href="Capture.PNG">
-    <title>Car Circuit</title>
+    
+    <title>BMW</title>
 </head>
 <body>
     <section id="title">
@@ -140,10 +141,10 @@
     <div class="container">
 
         <p>
-            <div class="btn-group btn-group-lg btn-block" role="group" aria-label="Basic example">
-            <a class="btn btn-secondary" data-toggle="collapse" href="#sedans" role="button" aria-expanded="false" aria-controls="sedans">
+            <div class="btn-group btn-group-sm btn-block" role="group" aria-label="Basic example">
+            <button class="btn btn-secondary" data-toggle="collapse" href="#sedans" role="button" aria-expanded="false" aria-controls="sedans">
               Sedans
-            </a>
+            </button>
             <button class="btn btn-secondary" type="button" data-toggle="collapse" data-target="#convertibles" aria-expanded="false" aria-controls="convertibles">
                 Convertibles
             </button>
@@ -419,7 +420,7 @@
                 <div class="card-header" style="background-color: silver;">Roadster</div>
                 <div class="card card-body">
                     <div class="row">
-                        <div class="col col-lg-6 md-6">
+                        <div class="col col-lg-6 md-auto">
                             <img src="bmw-zseries-z4-modelfinder-stage2-890x501.png" class="img2" alt="BMWz4">
                             <h5 style="color:black; "><i>BMW Z4 Roadster</i></h5>
                             
@@ -502,7 +503,7 @@
                 <div class="card-header" style="background-color: silver;">BMW i</div>
                 <div class="card card-body">
                     <div class="row">
-                        <div class="col-lg-6 md-6">
+                        <div class="col-lg-6 md-auto">
                             <img src="i15.png" class="img2" alt="BMWi8">
                             <h5 style="color:black; "><i>BMW i8</i></h5>
                         </div>
