--- a/page3.html
+++ b/page3.html
@@ -139,7 +139,8 @@
 </section>
 <section id="section1">
     <div class="container">
-
+        <div class="row">
+            <div class="col col-md-auto">
         <p>
             <div class="btn-group btn-group-sm btn-block" role="group" aria-label="Basic example">
             <button class="btn btn-secondary" data-toggle="collapse" href="#sedans" role="button" aria-expanded="false" aria-controls="sedans">
@@ -170,6 +171,8 @@
             </button>
         </div>
         </p>
+            </div>
+        </div>
         <div class="collapse" id="sedans">
               <div class="card-header" style="background-color: silver;">Sedans</div>
             <div class="card card-body">
