--- a/page3.html
+++ b/page3.html
@@ -158,19 +158,22 @@
                 Gran Turismo
             </button>
 
-            <button class="btn btn-secondary" type="button" data-toggle="collapse" data-target="#roadster" aria-expanded="false" aria-controls="roadster">
-                Roadster
-            </button>
-
-            <button class="btn btn-secondary" type="button" data-toggle="collapse" data-target="#suv" aria-expanded="false" aria-controls="suv">
-                Suv
-            </button>
-
-            <button class="btn btn-secondary" type="button" data-toggle="collapse" data-target="#bmwi" aria-expanded="false" aria-controls="bmwi">
-                BMW i
-            </button>
+           
         </div>
         </p>
+             <div class="btn-group btn-group-lg btn-block " role="group" aria-label="Basic example">
+        <button class="btn btn-secondary" type="button" data-toggle="collapse" data-target="#roadster" aria-expanded="false" aria-controls="roadster">
+            Roadster
+        </button>
+
+        <button class="btn btn-secondary" type="button" data-toggle="collapse" data-target="#suv" aria-expanded="false" aria-controls="suv">
+            Suv
+        </button>
+
+        <button class="btn btn-secondary" type="button" data-toggle="collapse" data-target="#bmwi" aria-expanded="false" aria-controls="bmwi">
+            BMW i
+        </button>
+        </div>
             </div>
         </div>
         <div class="collapse" id="sedans">
