--- a/page3.html
+++ b/page3.html
@@ -142,7 +142,7 @@
         <div class="row">
             <div class="col col-md-auto">
         <p>
-            <div class="btn-group btn-group-sm btn-block" role="group" aria-label="Basic example">
+            <div class="btn-group btn-group-lg btn-block" role="group" aria-label="Basic example">
             <button class="btn btn-secondary" data-toggle="collapse" href="#sedans" role="button" aria-expanded="false" aria-controls="sedans">
               Sedans
             </button>
@@ -426,7 +426,7 @@
                 <div class="card-header" style="background-color: silver;">Roadster</div>
                 <div class="card card-body">
                     <div class="row">
-                        <div class="col col-lg-6 md-auto">
+                        <div class="col col-lg-6 md-6">
                             <img src="bmw-zseries-z4-modelfinder-stage2-890x501.png" class="img2" alt="BMWz4">
                             <h5 style="color:black; "><i>BMW Z4 Roadster</i></h5>
                             
@@ -509,7 +509,7 @@
                 <div class="card-header" style="background-color: silver;">BMW i</div>
                 <div class="card card-body">
                     <div class="row">
-                        <div class="col-lg-6 md-auto">
+                        <div class="col-lg-6 md-6">
                             <img src="i15.png" class="img2" alt="BMWi8">
                             <h5 style="color:black; "><i>BMW i8</i></h5>
                         </div>
