--- a/page3.html
+++ b/page3.html
@@ -438,7 +438,7 @@
         <div class="card-header" style="background-color: silver;">Roadster</div>
         <div class="card card-body">
             <div class="row">
-                <div class="col col-lg-6 col-4">
+                <div class="col-lg-6 col-md-auto">
                     <img src="bmw-zseries-z4-modelfinder-stage2-890x501.png" class="img2" alt="BMWz4">
                     <h5 style="color:black; "><i>BMW Z4 Roadster</i></h5>
                     
