--- a/page3.html
+++ b/page3.html
@@ -142,7 +142,7 @@
         <div class="row">
             <div class="col col-md-auto">
         <p>
-            <div class="btn-group btn-group-lg btn-block" role="group" aria-label="Basic example">
+            <div class="btn-group btn-group btn-block" role="group" aria-label="Basic example">
             <button class="btn btn-secondary" data-toggle="collapse" href="#sedans" role="button" aria-expanded="false" aria-controls="sedans">
               Sedans
             </button>
@@ -418,7 +418,7 @@
     <div class="container">
     <div class="row">
         <div class="col col-md-auto">
-            <div class="btn-group btn-group-lg btn-block " role="group" aria-label="Basic example" style="padding: 2% 0%;">
+            <div class="btn-group btn-group btn-block " role="group" aria-label="Basic example" style="padding: 2% 0%;">
                 <button class="btn btn-secondary" type="button" data-toggle="collapse" data-target="#roadster" aria-expanded="false" aria-controls="roadster">
                     Roadster
                 </button>
