--- a/index.html
+++ b/index.html
@@ -137,9 +137,9 @@
                     <a href="page3.html" style="text-decoration: none; color:white"><h5 style="color:white"><b><u>BMW</u></b></h5></a>
                 </div>
                 <div class="col-lg-4 md-6">
-                  <img src="70e485452c868b71f14cd5e1286ed574x.webp" class="img2">
-                  <h5 style="color:white"><b><u>Audi</u></b></h5>
-              </div>
+                  <a href="page4.html" style="text-decoration: none; color:white"><img src="70e485452c868b71f14cd5e1286ed574x.webp" class="img2"></a>
+                  <a href="page4.html" style="text-decoration: none; color:white"><h5 style="color:white"><b><u>Audi</u></b></h5></a>
+             </div>
             </div>
     
             <div class="row">
