--- a/page3.html
+++ b/page3.html
@@ -535,7 +535,7 @@
 </section>
 <section class="link123">
     <div class="alert alert-dark" role="alert" style="text-align: center;">
-        For More Information contact official website of   <a href="https://www.bmw-pakistan.com/en/index.html" class="alert-link" style="text-decoration: none;">BMW Dewan</a>
+        For More Information visit official website of   <a href="https://www.bmw-pakistan.com/en/index.html" class="alert-link" style="text-decoration: none;">BMW Dewan</a>
       </div>
 </section>
 <script src="js/jquery.js"></script>
