--- a/page2.html
+++ b/page2.html
@@ -327,7 +327,7 @@
 
     <section class="sedans">
         <div class="alert alert-dark" role="alert" style="text-align: center;">
-            For More Information contact official website of   <a href="https://www.mbusa.com/en/home" class="alert-link" style="text-decoration: none;">Mercedes Benz</a>. 
+            For More Information visit official website of   <a href="https://www.mbusa.com/en/home" class="alert-link" style="text-decoration: none;">Mercedes Benz</a>. 
           </div>
         <!--h5 style="text-align: center; color:whitesmoke"><i>For More Information contact official website of  <a href="https://www.mbusa.com/en/home" style="text-decoration: none; color:white;"></a></i></h5-->
     </section>
