--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
               <div class="col-lg-4 md-6">
                   
                   <a href="page5.html" style="text-decoration: none; color:white"><img src="cadillac.jpg" class="img2"></a>
-                  <a href="page5.html" style="text-decoration: none; color:white"><h5 style="color:white"><b><u>Audi</u></b></h5></a>
+                  <a href="page5.html" style="text-decoration: none; color:white"><h5 style="color:white"><b><u>Cadillac</u></b></h5></a>
             
                 </div>
               <div class="col-lg-4 md-6">
