--- a/index.html
+++ b/index.html
@@ -150,9 +150,10 @@
             
                 </div>
               <div class="col-lg-4 md-6">
-                  <img src="lincoln.jpg" class="img2">
-                  <h5 style="color:white"><b><u>Lincoln</u></b></h5>
-              </div>
+               <a href="page6.html" style="text-decoration: none; color:white"><img src="lincoln.jpg" class="img2"></a>
+                  <a href="page6.html" style="text-decoration: none; color:white"><h5 style="color:white"><b><u>Lincoln</u></b></h5></a>
+            
+                </div>
               <div class="col-lg-4 md-6">
                 <img src="235-2350408_land-rover-logo-png-file-land-rover-range.png" class="img2">
                 <h5 style="color:white"><b><u>Range Rover</u></b></h5>
