--- a/page6.html
+++ b/page6.html
@@ -48,7 +48,7 @@
         <div class="container" style="position: center;">
             <div class="row">
                 <div class="col col-md-auto col-lg-6">
-                    <img style="height:200px; " src="Lincoln.jpg">
+                    <img style="height:200px; " src="lincoln.jpg">
                 </div>
             </div>
         </div>
