--- a/page2.html
+++ b/page2.html
@@ -14,8 +14,8 @@
 <body>
     <section id="title">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
-            <a class="navbar-brand" href="#">
-              <img class="titleimg" src="tempsnip.png"> <a href="index.html" style="text-decoration: none; color:white;">Car Circuit</a>
+            <a class="navbar-brand" href="index.html">
+              <img class="titleimg"  href="index.html" src="tempsnip.png"> <a href="index.html" style="text-decoration: none; color:white;">Car Circuit</a>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
