--- a/page3.html
+++ b/page3.html
@@ -15,8 +15,8 @@
 <body>
     <section id="title">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark " id="nav1">
-            <a class="navbar-brand" href="#">
-                <img class="titleimg" src="tempsnip.png" ><a href="index.html" id="al" style="color:white; text-decoration: none; "> Car Circuit </a>
+            <a class="navbar-brand" href="index.html">
+                <img class="titleimg" href="index.html" src="tempsnip.png" ><a href="index.html" id="al" style="color:white; text-decoration: none; "> Car Circuit </a>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
