--- a/page7.html
+++ b/page7.html
@@ -108,7 +108,7 @@
         <br>
       <div class="container">
         <div class="row">
-            <div class="col-lg-6">
+            <div class="col-lg-6 col-md-auto">
                 <button type="button" class="btn btn-light btn-lg btn-block"  data-toggle="collapse" href="#suvs"aria-controls="suvs">Current Models</button>
             </div>
         </div>
