--- a/page10.html
+++ b/page10.html
@@ -129,7 +129,7 @@
                 </div>
                 <div class="col-lg-3 col-md-auto">
                     <p style="text-align: center; COLOR:SILVER;">BLACK BADGE GHOST</p>
-                    <img src="C:\Users\Allah\Desktop\New folder (2)\Rolls Royce\762d64109f44ca727366e81306dd7c0d011b0732.jpg" class="img2" style="width:auto;margin:auto;" alt="BMW7SERIES">
+                    <img src="762d64109f44ca727366e81306dd7c0d011b0732.jpg" class="img2" style="width:auto;margin:auto;" alt="BMW7SERIES">
                     
                   
                 </div>
